--- a/00_0_CHECK_1_install.ipynb
+++ b/00_0_CHECK_1_install.ipynb
@@ -18,13 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2024-09-10T09:33:05.236029Z",
-     "start_time": "2024-09-10T09:33:04.472434Z"
-    }
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -45,106 +41,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ALLUSERSPROFILE: C:\\ProgramData\n",
-      "APPDATA: C:\\Users\\overvelj\\AppData\\Roaming\n",
-      "COMMONPROGRAMFILES: C:\\Program Files\\Common Files\n",
-      "COMMONPROGRAMFILES(X86): C:\\Program Files (x86)\\Common Files\n",
-      "COMMONPROGRAMW6432: C:\\Program Files\\Common Files\n",
-      "COMPUTERNAME: AKDGPORT11191\n",
-      "COMSPEC: C:\\WINDOWS\\system32\\cmd.exe\n",
-      "DRIVERDATA: C:\\Windows\\System32\\Drivers\\DriverData\n",
-      "EFC_11424: 0\n",
-      "FPS_BROWSER_APP_PROFILE_STRING: Internet Explorer\n",
-      "FPS_BROWSER_USER_PROFILE_STRING: Default\n",
-      "HOMEDRIVE: C:\n",
-      "HOMEPATH: \\Users\\overvelj\n",
-      "IDEA_INITIAL_DIRECTORY: C:\\WINDOWS\\system32\n",
-      "JAVA_HOME: C:\\Program Files\\Java\\jdk-11\\\n",
-      "LANG: en_US.UTF-8\n",
-      "LANGUAGE: \n",
-      "LC_ALL: en_US.UTF-8\n",
-      "LOCALAPPDATA: C:\\Users\\overvelj\\AppData\\Local\n",
-      "LOGONSERVER: \\\\CDCDCADM02\n",
-      "NUMBER_OF_PROCESSORS: 8\n",
-      "ONEDRIVE: C:\\Users\\overvelj\\OneDrive - Karel de Grote Hogeschool\n",
-      "ONEDRIVECOMMERCIAL: C:\\Users\\overvelj\\OneDrive - Karel de Grote Hogeschool\n",
-      "OS: Windows_NT\n",
-      "PATH: C:\\DevApps\\311SparkVENV\\Scripts;C:\\Program Files\\Common Files\\Oracle\\Java\\javapath;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapath;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python311;C:\\Program Files\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\WINDOWS\\system32;C:\\WINDOWS;C:\\WINDOWS\\System32\\Wbem;C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0\\;C:\\WINDOWS\\System32\\OpenSSH\\;C:\\Program Files (x86)\\Microsoft SQL Server\\150\\DTS\\Binn\\;C:\\Program Files\\dotnet\\;C:\\Program Files\\Graphviz\\bin;C:\\Program Files\\mongosh\\;C:\\Program Files\\MongoDB\\Server\\5.0\\bin;C:\\DevApps\\VENV309_DS2\\\\Scripts;C:\\Program Files\\Microsoft SQL Server\\Client SDK\\ODBC\\170\\Tools\\Binn\\;C:\\DevApps\\gradle-7.6\\bin;C:\\Program Files\\Docker\\Docker\\resources\\bin;C:\\Program Files\\Amazon\\AWSCLIV2\\;C:\\Program Files\\nodejs\\;C:\\Program Files\\Git\\cmd;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python312\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python312\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Launcher\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\overvelj\\.dotnet\\tools;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Microsoft VS Code\\bin;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Git\\cmd;C:\\Program Files\\mongosh\\;C:\\Users\\overvelj\\AppData\\Local\\JetBrains\\Toolbox\\scripts;C:\\Users\\overvelj\\AppData\\Roaming\\npm;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;;C:\\DevApps\\bigdatatools\\spark-3.5.2-bin-hadoop3\\bin;C:\\DevApps\\bigdatatools\\hadoop-3.4.0-win10-x64\\bin;C:\\Program Files\\Java\\jdk-11\\bin\n",
-      "PATHEXT: .COM;.EXE;.BAT;.CMD;.VBS;.VBE;.JS;.JSE;.WSF;.WSH;.MSC;.PY;.PYW\n",
-      "PROCESSOR_ARCHITECTURE: AMD64\n",
-      "PROCESSOR_IDENTIFIER: Intel64 Family 6 Model 142 Stepping 12, GenuineIntel\n",
-      "PROCESSOR_LEVEL: 6\n",
-      "PROCESSOR_REVISION: 8e0c\n",
-      "PROGRAMDATA: C:\\ProgramData\n",
-      "PROGRAMFILES: C:\\Program Files\n",
-      "PROGRAMFILES(X86): C:\\Program Files (x86)\n",
-      "PROGRAMW6432: C:\\Program Files\n",
-      "PROMPT: (311SparkVENV) $P$G\n",
-      "PSDISTRICT_BOOTIMAGEVERSION: CCM002C6\n",
-      "PSDISTRICT_DEPLOYMENTID: CCM00B0B\n",
-      "PSDISTRICT_INSTALLATIONDATE: 20200814-15:15:29\n",
-      "PSDISTRICT_INSTALLATIONMETHOD: PXE\n",
-      "PSDISTRICT_OFFICEINSTALL: clicktorun2016\n",
-      "PSDISTRICT_SITECODE: CCM\n",
-      "PSDISTRICT_TAAK: domein\n",
-      "PSDISTRICT_TATTOOSCRIPTVERSION: 1.4.3\n",
-      "PSDISTRICT_TSID: CCM00B0B\n",
-      "PSDISTRICT_TSNAME: KdG_W10_1909_Prod_200612.02\n",
-      "PSDISTRICT_UNATTEND: win10ent64-nl-BE-Admin.xml\n",
-      "PSMODULEPATH: C:\\Program Files\\WindowsPowerShell\\Modules;C:\\WINDOWS\\system32\\WindowsPowerShell\\v1.0\\Modules\n",
-      "PUBLIC: C:\\Users\\Public\n",
-      "PYTHONPATH: C:\\DevProjects\\Databricks\n",
-      "SESSIONNAME: Console\n",
-      "SYSTEMDRIVE: C:\n",
-      "SYSTEMROOT: C:\\WINDOWS\n",
-      "TEMP: C:\\Users\\overvelj\\AppData\\Local\\Temp\n",
-      "TMP: C:\\Users\\overvelj\\AppData\\Local\\Temp\n",
-      "UATDATA: C:\\WINDOWS\\CCM\\UATData\\D9F8C395-CAB8-491d-B8AC-179A1FE1BE77\n",
-      "USERDNSDOMAIN: ADMIN.KDG.BE\n",
-      "USERDOMAIN: ADMIN\n",
-      "USERDOMAIN_ROAMINGPROFILE: ADMIN\n",
-      "USERNAME: overvelj\n",
-      "USERPROFILE: C:\\Users\\overvelj\n",
-      "VIRTUAL_ENV: C:\\DevApps\\311SparkVENV\n",
-      "WINDIR: C:\\WINDOWS\n",
-      "ZES_ENABLE_SYSMAN: 1\n",
-      "_OLD_VIRTUAL_PATH: C:\\Program Files\\Common Files\\Oracle\\Java\\javapath;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapath;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python311;C:\\Program Files\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\WINDOWS\\system32;C:\\WINDOWS;C:\\WINDOWS\\System32\\Wbem;C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0\\;C:\\WINDOWS\\System32\\OpenSSH\\;C:\\Program Files (x86)\\Microsoft SQL Server\\150\\DTS\\Binn\\;C:\\Program Files\\dotnet\\;C:\\Program Files\\Graphviz\\bin;C:\\Program Files\\mongosh\\;C:\\Program Files\\MongoDB\\Server\\5.0\\bin;C:\\DevApps\\VENV309_DS2\\\\Scripts;C:\\Program Files\\Microsoft SQL Server\\Client SDK\\ODBC\\170\\Tools\\Binn\\;C:\\DevApps\\gradle-7.6\\bin;C:\\Program Files\\Docker\\Docker\\resources\\bin;C:\\Program Files\\Amazon\\AWSCLIV2\\;C:\\Program Files\\nodejs\\;C:\\Program Files\\Git\\cmd;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python312\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python312\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Launcher\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\overvelj\\.dotnet\\tools;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Microsoft VS Code\\bin;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Git\\cmd;C:\\Program Files\\mongosh\\;C:\\Users\\overvelj\\AppData\\Local\\JetBrains\\Toolbox\\scripts;C:\\Users\\overvelj\\AppData\\Roaming\\npm;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;\n",
-      "_OLD_VIRTUAL_PROMPT: $P$G\n",
-      "JPY_SESSION_NAME: 00_0_CHECK_1_install.ipynb\n",
-      "JPY_INTERRUPT_EVENT: 1792\n",
-      "IPY_INTERRUPT_EVENT: 1792\n",
-      "JPY_PARENT_PID: 1744\n",
-      "PYDEVD_USE_FRAME_EVAL: NO\n",
-      "TERM: xterm-color\n",
-      "CLICOLOR: 1\n",
-      "FORCE_COLOR: 1\n",
-      "CLICOLOR_FORCE: 1\n",
-      "PAGER: cat\n",
-      "GIT_PAGER: cat\n",
-      "MPLBACKEND: module://matplotlib_inline.backend_inline\n",
-      "PYSPARK_PYTHON: python\n",
-      "SPARK_HOME: C:\\DevApps\\bigdatatools\\spark-3.5.2-bin-hadoop3\n",
-      "HADOOP_HOME: C:\\DevApps\\bigdatatools\\hadoop-3.4.0-win10-x64\n",
-      "PYSPARK_HADOOP_VERSION: 3\n"
-     ]
-    }
-   ],
+   "execution_count": 1,
+   "outputs": [],
    "source": [
     "import ConnectionConfig as cc\n",
-    "cc.setupEnvironment()\n",
-    "cc.listEnvironment()"
+    "cc.setupEnvironment()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-10T09:33:05.380747800Z",
-     "start_time": "2024-09-10T09:33:05.212618900Z"
+     "end_time": "2024-09-17T06:48:31.008364500Z",
+     "start_time": "2024-09-17T06:48:30.209876Z"
     }
    }
   },
@@ -161,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "builder = SparkSession.builder \\\n",
@@ -176,11 +83,7 @@
     "\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-09-10T09:33:05.491752600Z",
-     "start_time": "2024-09-10T09:33:05.256654Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -204,44 +107,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "spark = builder.getOrCreate()"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-09-10T09:33:30.769003200Z",
-     "start_time": "2024-09-10T09:33:05.337106400Z"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "<pyspark.sql.session.SparkSession at 0x25125c9c450>",
-      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://AKDGPORT11191.mshome.net:4040\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.5.2</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>InstallCheck</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "spark.getActiveSession()"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-09-10T09:33:32.724792600Z",
-     "start_time": "2024-09-10T09:33:30.772267500Z"
-    }
+    "collapsed": false
    },
-   "execution_count": 5
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -257,47 +142,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------------------+\n",
-      "|               value|\n",
-      "+--------------------+\n",
-      "|This is the 100th...|\n",
-      "|is presented in c...|\n",
-      "|Library of the Fu...|\n",
-      "|often releases Et...|\n",
-      "|                    |\n",
-      "|         Shakespeare|\n",
-      "|                    |\n",
-      "|*This Etext has c...|\n",
-      "|                    |\n",
-      "|<<THIS ELECTRONIC...|\n",
-      "|SHAKESPEARE IS CO...|\n",
-      "|PROVIDED BY PROJE...|\n",
-      "|WITH PERMISSION. ...|\n",
-      "|DISTRIBUTED SO LO...|\n",
-      "|PERSONAL USE ONLY...|\n",
-      "|COMMERCIALLY.  PR...|\n",
-      "|SERVICE THAT CHAR...|\n",
-      "|                    |\n",
-      "|*Project Gutenber...|\n",
-      "|in the presentati...|\n",
-      "+--------------------+\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "DataFrame[summary: string, value: string]"
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# File location and type\n",
     "file_location = \"./FileStore/tables/shakespeare.txt\"\n",
@@ -310,11 +156,7 @@
     "df.describe()"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-09-10T09:33:39.879496800Z",
-     "start_time": "2024-09-10T09:33:32.705489Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -329,39 +171,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+----+------+\n",
-      "|word|amount|\n",
-      "+----+------+\n",
-      "| the| 27549|\n",
-      "| and| 26037|\n",
-      "|   i| 19540|\n",
-      "|  to| 18700|\n",
-      "|  of| 18010|\n",
-      "|   a| 14383|\n",
-      "|  my| 12455|\n",
-      "|  in| 10671|\n",
-      "| you| 10630|\n",
-      "|that| 10487|\n",
-      "|  is|  9145|\n",
-      "| for|  7982|\n",
-      "|with|  7931|\n",
-      "| not|  7643|\n",
-      "|your|  6871|\n",
-      "| his|  6749|\n",
-      "|  be|  6700|\n",
-      "| but|  5886|\n",
-      "|  he|  5884|\n",
-      "|  as|  5882|\n",
-      "+----+------+\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "df.createOrReplaceTempView('lines')\n",
     "words = spark.sql('select explode(split(value, \" \")) from lines')\n",
@@ -370,11 +181,7 @@
     "lowerwords.show()\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-09-10T09:33:44.497206Z",
-     "start_time": "2024-09-10T09:33:39.786037800Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -395,17 +202,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "DataFrame[summary: string, word: string, amount: string]"
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# With this registered as a temp view, it will only be available to this particular notebook. If you'd like other users to be able to query this table, you can also create a table from the DataFrame.\n",
     "# Once saved, this table will persist across cluster restarts as well as allow various users across different notebooks to query this data.\n",
@@ -417,32 +215,16 @@
     "lowerwords.write.format(\"delta\").mode(\"overwrite\").saveAsTable(permanent_table_name)"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-09-10T09:34:05.835252900Z",
-     "start_time": "2024-09-10T09:33:44.469395900Z"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "spark.stop()"
    ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-09-10T09:34:33.070662300Z",
-     "start_time": "2024-09-10T09:34:32.122312Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
    }
